--- a/week-7-summarizing-penguins.qmd
+++ b/week-7-summarizing-penguins.qmd
@@ -292,7 +292,11 @@ Bonus Point: The names in the resulting table should be the original column name
 #| label: across-function
 penguins |>
   group_by(island) |>
-  summarize(across(contains("mm")))
+  summarize(across(contains("mm"), 
+                   .fns = median, 
+                   na.rm = TRUE,
+                   .names = "{.col}_median"))
+## added a label and followed the prompt as close as possible. Use the previous code structures as a guideline.
 ```
 
 Starting from penguins, write a piped sequence to:  
@@ -303,7 +307,16 @@ Starting from penguins, write a piped sequence to:
 - Group the data by `spp_penguin`  
 - Find the mean value for any variable containing the string “length”, by penguin species, with column names updated to the original column name appended with "_mean" at the end  
 ```{r}
-
+#| label: excluding-biscoe
+penguins |> 
+  filter (island != "Biscoe") |>
+  select(species : body_mass_g) |>
+  rename(spp_penguin = species) |>
+  group_by(spp_penguin) |>
+  summarize(across(contains("length"),
+                   mean, na.rm = TRUE,
+                   .names = "{.col}_mean"))
+## added new label and followed the prompt while using the past code structures as guidelines.
 ```
 
 
@@ -334,29 +347,37 @@ penguins |>
 We can combine `count()` with `mutate()` to find proportions and the visualize them - comment the following code:
 ```{r}
 penguins |> 
-  count(species, island) |> #comment
-  group_by(species) |> #comment 
-  mutate(total = sum(n),  #comment
-         prop = n/total) |>  #comment
-  ggplot(aes(x = island, y = prop, fill = species)) + #comment
-  geom_col(position = position_dodge()) + #comment
-  scale_fill_viridis_d() + #comment
-  labs(x = "Palmer Islands",
-       y = "Proportion of Penguin Species per Island",
-       fill = "Species") +
-  theme_minimal()
+  count(species, island) |> #count(species, island) |>
+  group_by(species) |> #group_by(species)|>
+  mutate(total = sum(n),  #mutate(total = sum(n),
+         prop = n/total) |>  #prop = n/total)|>
+  ggplot(aes(x = island, y = prop, fill = species)) + # ggplot(aes(x = island, y = prop, fill = species)) +
+  geom_col(position = position_dodge()) + #geom_col(position = position_dodge()) +
+  scale_fill_viridis_d() + #scale_fill_viridis_d()
+  labs(x = "Palmer Islands", #labs(x = "Palmer Islands",
+       y = "Proportion of Penguin Species per Island", #y = "Proportion of Penguin Species per Island"
+       fill = "Species") + #fill = "Species") +
+  theme_minimal()#theme_minimal()
+## commented the given code, seperately
 ```
 
 ### Practice with `count()`
 Starting with penguins, find counts of observation by species, island, and year.
 ```{r}
-
+#| label: count-species-island-year
+penguins |>
+  count(species, island, year)
+## added a label and found the counts for species, island, and year
 ```
 
 
 Starting with penguins, filter to only keep Adelie and Gentoo penguins, then find counts by species and sex.
 ```{r}
-
+#| label: count-species-and-sex
+penguins |>
+  filter(species == "Adelie" | species == "Gentoo") |>
+  count(species, sex)
+## added a label and followed the prompt by filtering Adelie and Gentoo penguins and found the counts of species and sex
 ```
 
 
@@ -385,12 +406,12 @@ Identify what is going on in this code:
 
 ```{r}
 penguins |>
-  select(species, year, flipper_length_mm) |>  #comment
-  rename(study_year = year) |>   #comment
-  filter(species == "Adelie") |>  #comment
-  mutate(flipper_rank = case_when(   #comment
-    flipper_length_mm < 200 ~ 1,   #comment
-    flipper_length_mm >= 200 ~ 2,  #comment
+  select(species, year, flipper_length_mm) |>  # it is only selecting three columns, species, year, flipper_length_mm
+  rename(study_year = year) |>   # it is renaming the year column to study_year
+  filter(species == "Adelie") |>  #filtering the data to only include the Adelie
+  mutate(flipper_rank = case_when(   #mutating the following code
+    flipper_length_mm < 200 ~ 1,   #determining if the flipper length is less than 200
+    flipper_length_mm >= 200 ~ 2,  #determining if the flipper length is greater than or equal to 200
     TRUE ~ 0 # 0 for anything else
   ))
 ```
@@ -403,13 +424,26 @@ Add a new column to penguins called study_year that contains:
 - “Year 3” if the year is 2009 
 
 ```{r}
-
+#| label: determine-study-year
+penguins |>
+  mutate(study_year = case_when(year == 2007 ~ "Year 1", 
+                                year == 2008 ~ "Year 2",
+                                year == 2009 ~ "Year 3"))
+## added a label and assigned the years the corresponding names
 ```
 
 
 Starting with penguins, only keep observations for chinstrap penguins, then only keep the `flipper_length_mm` and `body_mass_g` variables. Add a new column called `fm_ratio` that contains the ratio of flipper length to body mass for each penguin. Next, add another column named `ratio_bin` which contains the word “high” if `fm_ratio` is greater than or equal to 0.05, “low” if the ratio is less than 0.05, and “no record” if anything else (e.g. NA). 
 
 ```{r}
+#| label: flipper-mass-ratio
+penguins |>
+  filter(species == "Chinstrap") |>
+  select(flipper_length_mm, body_mass_g) |>
+  mutate (fm_ratio = flipper_length_mm/ body_mass_g, 
+          ratio_bin = case_when(!is.na(fm_ratio) & fm_ratio >= 0.05 ~ "high",
+           !is.na(fm_ratio) & fm_ratio < 0.05 ~ "low",
+           TRUE ~ "no record"))
 
 ```
 
